fixing navbar issue on mobile

--- a/scss/sections/_navbar.scss
+++ b/scss/sections/_navbar.scss
@@ -1,5 +1,10 @@
 @use'../custom' as *;
 @use'../components/mixins' as *;
+
+nav {
+    z-index: 999 !important;
+    transform: rotateY(0deg) !important;
+}
 .menu {
     @include gradient;
     z-index: 100;
